Finished Item Pickup Stash Widget

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7382502A4CEF0CA5F8E626816CC376FF
-ProjectName=Third Person Game Template
+ProjectName=ActionAdventure
+ProjectVersion=0.0.1
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +9,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
