--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/Maps/VillageBlockout.VillageBlockout
 GlobalDefaultGameMode="/Script/GoingAction.GoingActionGameMode"
+GameInstanceClass=/Game/Blueprints/BP_ActionGameInstance.BP_ActionGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
