Fixing start crashes
Added default values for structs
Added null checks
Most importantly, fixed interface argument signature

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Maps/VillageBlockout.VillageBlockout
 EditorStartupMap=/Game/Maps/VillageBlockout.VillageBlockout
 GlobalDefaultGameMode="/Script/GoingAction.GoingActionGameMode"
 GameInstanceClass=/Game/Blueprints/BP_ActionGameInstance.BP_ActionGameInstance_C
