Added Fab Asset: Elf Arden - Stylized Medieval Elven Warrior - Animated RPG Character Hero - #56, Replaced character with new one

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,9 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
-Content/Characters/*
+Content/Characters/Mannequin_UE4*
+Content/Characters/Mannequins*
+
 Content/StarterContent/*
 /Builds
+/Content/ElfArden
